--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "server": "nodemon ./server/index.ts",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\" "
+    "dev": "concurrently \"npm run server\" \"npm run client\" ",
+    "data:import": "node ./server/seeder",
+    "data:destroy": "node server/seeder.ts -d"
   },
   "repository": {
     "type": "git",
@@ -20,15 +22,21 @@
   },
   "homepage": "https://github.com/andrei-kaliada/ProShop#readme",
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
+    "bcrypt": "^5.1.0",
     "colors": "^1.4.0",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "js": "^0.1.0",
     "mongoose": "^6.8.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15"
   }
